scss/_pages/_tutorial-index.scss
/* ... */
.\--api {
  .hero {
    border-bottom: $border;
  }
  .\--breadcrumb-container {
    border-bottom: 0;
  }
}

.js-splash--section-title {
  @extend h4;
  font-weight: 600 !important;

  text-transform: capitalize;
}

.js-splash--feature-block {
  .block-title {
    font-weight: 300;
    padding: $unit*2;
    padding-bottom: 0;
    font-size: 2rem;
    //border-top: $border;
    margin-top: $unit;
    text-transform: capitalize;

  }
  .js-splash--inline-text-right, .js-splash--inline-text-left {
    padding: $unit*2;
    background: $lb;
    border: $border;
  }
  .block-content {
    padding: $unit*2;
    font-weight: 400;

  }
}

.\--grid {

  p {
    padding: $unit*2;
    padding-bottom: 0;
  }
}

h2 {
  padding-left: $unit*2;
  font-weight: 100;
  font-size: 2.5rem;
}

hr {
  display: none !important;
}

div.row {
  margin-left: 0;
  padding-left: 0 !important;
  //border-bottom:$border;/
  margin-bottom: $unit*2;
  display: flex;
  width: 100%;
  h1, h2, h3, h4, h5, h6 {
    width: 100%;
    a {
      //width: 100%;
      //white-space: nowrap;
      br {
        display: none;

      }
    }
  }
  h6 {
    font-size: 2rem;
    font-weight: 100;
    padding: $unit*2;
    &::before {
      display: none;
    }
    pre {
      width: 100%;
    }
  }
  div.border {
    margin: $unit*2 0;
    border: $border;
    //padding:$unit*2;
  }
  div.columns {
    max-width: 100%;
    width: 100%;
  }
  flex-wrap: wrap;
  & > p {
    width: 100%;
  }
  & > pre {
    padding: $unit*2;

    code {
    }
    width: 100%;
  }
  .four {
    flex: 1 1 25%;
    border: $border;
    background: $lb;
    align-self: flex-start;
  }
  .eight {
    flex: 1 1 75%;
    padding-right: $unit*2;

    h4 {
      font-weight: 100;
      font-size: 2rem;
      border-bottom: $border;
      padding-bottom: $unit*2;
    }
    ul {
      li {
        margin: $unit*2 0;
        //border-bottom:$border;
        margin-bottom: $unit*2;
        padding-bottom: $unit*2;
        line-height: 2;
        overflow-x: auto;
        &:first-line {
          font-size: 1.5rem;
          display: inline-block;
          margin-bottom: $unit;
        }
        ul {
          margin-left: $unit*2;
          padding-left: $unit*2;
          border-left: 5px solid rgba($lb, 0.8);
        }
        a {
          color: $bblue !important;
        }
      }
    }
  }
  padding-left: $unit*2;
  padding-bottom: $unit*2;

  .toc {
    h4 {
      padding: $unit*2;
      margin: 0;
      border-bottom: $border;
    }
    ul {
      margin: 0;
      background: darken($lb, 3%);
      width: 100%;
      li {
        margin: 0;
        width: 100%;
        li {
          padding-left: $unit*2;
        }
        a {
          background: $lb;
          padding: $unit $unit*2;
          width: 100%;
          display: block;
          margin: 0;
          border-bottom: $border;
          &:hover {
            background: white;
          }
          &::before {
            display: none;
          }
        }
      }
    }
  }

}

div.section {
  //padding-left: $unit*2;
  //padding-right: $unit*4;
}

div.tipbox.row{
  background: $lb;
  padding:$unit*2;
  padding-right:$unit*2 !important;
  padding-left:$unit*2 !important;
  border:$border;
  margin-top:$unit*2;
  //display: block;
  h4{
    div.icon{
      display: none;
    }
    font-size:1.5rem;
    border-bottom:0;
    background: darken($lb, 3%);
  }

  a{
    display: inline-block;
    padding:$unit*2;
    background: lighten($lb, 3%);
    border: $border;
    margin-right:$unit;
    margin-top:$unit;
  }
}

section.section{
  h4{
    a{
      padding:0 $unit/1.5;
    }
    margin-bottom:$unit*2;
  }
  b{
    font-weight:600 !important;
  }
  div.content-box{
    @extend p;
    //padding:$unit*2;
    p{
      padding: $unit*2 0;
    }
  }
}

